--- a/archives.html
+++ b/archives.html
@@ -5,52 +5,9 @@ title: tontinme's blog
 
 <div id="content" class="index">
 
-	<p class="nav">TECH</p>
 	<ul class="posts">
-		{% for post in site.categories.tech %}
-		<li><p class="date">{{ post.date | date:"%b %d, %Y" }}</p> <a href="{{ post.url }}">{{ post.title }}</a></li>
-		{% endfor %}
-	</ul>
-
-	<p class="nav">OS PROJECTS</p>
-	<ul class="posts">
-		{% for post in site.categories.project %}
-		<li><p class="date">{{ post.date | date:"%b %d, %Y" }}</p> <a href="{{ post.url }}">{{ post.title }}</a></li>
-		{% endfor %}
-	</ul>
-
-	<p class="nav">THINKING</p>
-	<ul class="posts">
-		{% for post in site.categories.thinking %}
-		<li><p class="date">{{ post.date | date:"%b %d, %Y" }}</p> <a href="{{ post.url }}">{{ post.title }}</a></li>
-		{% endfor %}
-	</ul>
-
-	<p class="nav">TRANSLATES</p>
-	<ul class="posts">
-		{% for post in site.categories.translate %}
-		<li><p class="date">{{ post.date | date:"%b %d, %Y" }}</p> <a href="{{ post.url }}">{{ post.title }}</a></li>
-		{% endfor %}
-	</ul>
-
-	<p class="nav">READINGS</p>
-	<ul class="posts">
-		{% for post in site.categories.reading %}
-		<li><p class="date">{{ post.date | date:"%b %d, %Y" }}</p> <a href="{{ post.url }}">{{ post.title }}</a></li>
-		{% endfor %}
-	</ul>
-
-	<p class="nav">MOVIES</p>
-	<ul class="posts">
-		{% for post in site.categories.movie %}
-		<li><p class="date">{{ post.date | date:"%b %d, %Y" }}</p> <a href="{{ post.url }}">{{ post.title }}</a></li>
-		{% endfor %}
-	</ul>
-
-	<p class="nav">LIFE</p>
-	<ul class="posts">
-		{% for post in site.categories.life %}
-		<li><p class="date">{{ post.date | date:"%b %d, %Y" }}</p> <a href="{{ post.url }}">{{ post.title }}</a></li>
+		{% for post in site.posts %}
+		<li><p class="date" cate="{{ post.categories }}">{{ post.date | date:"%b %d, %Y" }}</p> <a href="{{ post.url }}">{{ post.title }}</a></li>
 		{% endfor %}
 	</ul>
 
