--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: tontinme's blog
             </li>
             {% endfor %}
             <li class="none">
-               <a href="/archives/">View more posts in the archives...</a>
+               <a href="/archives.html">View more posts in the archives...</a>
             </li>
          </ul>
 
