--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@ layout: default
 title: tontinme's blog
 ---
 
+<div class="section" id="banner">
+	<img src="/images/banner1.jpg" alt="Cool image I didn't draw." />
+</div>
 <div id="content" class="index">
+
+	<div class="section" id="banner">
+		<img src="/images/banner1.jpg" alt="Cool image I didn't draw.">
+	</div>
 
 	<ul class="posts">
             {% for post in site.posts limit:7 offset:0 %}
