--- a/resume.html
+++ b/resume.html
@@ -7,13 +7,13 @@
 	<title>tontinme's blog</title> 
 </head>
 <body>
-<div style="width:800px;border:1x solid #eeeeee;margin:0px auto;align:center;vertical-align:middle;">
+<div style="width:800px;border:1x solid #eeeeee;margin:0px auto;text-align:center;vertical-align:middle;padding:30px;">
 <p style="text-align: left;">
 	如果你是误打误撞，迷路了，那么请原路返回</p>
 <p style="text-align: left;">
 	如果你也不知道自己为什么会来到这里，请点击<a href="http://tontin.me">首页</a></p>
 <p style="text-align: left;">
-	如果你只是想了解一下这个blog到底是谁的，可以在<a href="http://42qu.com/tontinme">这里看到真人照</a></p>
+	如果你只是想了解一下这个blog到底是谁的，可以在<a href="http://tontinme.42qu.com">这里看到真人照</a></p>
 <p style="text-align: left;">
 如果你确信自己是看到了&ldquo;简历/resume&rdquo;才进来的，可以发送邮件到<a href="mailto:tontinme@gmail.com?subject=Request%20Resume&amp">这里</a>，我会尽快回复</p>
 <p style="text-align: left;">
